otelcol: memory_limiter: limit: 400, 500 mid

--- a/otelcol.yaml
+++ b/otelcol.yaml
@@ -27,6 +27,8 @@ exporters:
 processors:
   memory_limiter:
     check_interval: 5s
+    limit_mib: 4000
+    spike_limit_mib: 500
   batch:
     # Google Cloud Monitoring limits batches to 200 metric points.
     send_batch_max_size: 200
