otelcol: prometheus_simple doesn't do traces

--- a/otelcol.yaml
+++ b/otelcol.yaml
@@ -36,10 +36,10 @@ processors:
 
 service:
   pipelines:
-    traces:
-      receivers: [prometheus_simple]
-      processors: [memory_limiter, batch]
-      exporters: [googlecloud, logging]
+    # traces:
+    #   receivers: [prometheus_simple]
+    #   processors: [memory_limiter, batch]
+    #   exporters: [googlecloud, logging]
     metrics:
       receivers: [prometheus_simple]
       processors: [memory_limiter, batch]
